force-app/main/default/objects/JEASP01__CreateCampaignSetting__mdt/JEASP01__CreateCampaignSetting__mdt.object-meta.xml
<CustomObject>
    <description>キャンペーン作成画面用の設定です。</description>
    <label>キャンペーン作成設定</label>
</CustomObject>