force-app/main/default/objects/JEASP01__CreateCampaignSetting__mdt/fields/JEASP01__EmailField__c.field-meta.xml
<CustomField>
    <fullName>JEASP01__EmailField__c</fullName>
    <inlineHelpText>リードのメールアドレス項目と対象になるSAQL項目を入力します。リードが一意であるか判定を行うために必要になります。</inlineHelpText>
    <label>(外部データ)リードのキーとなるSAQLメールアドレス項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>