force-app/main/default/objects/JEASP01__CreateCampaignSetting__mdt/fields/JEASP01__FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>JEASP01__FieldApiName__c</fullName>
    <inlineHelpText>表示したい列のSAQL項目名を設定します。カンマ区切りにすることで複数選択ができます。登録した順に左から表示されます。</inlineHelpText>
    <label>表示したいSAQL項目名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>