force-app/main/default/objects/JEASP01__CreateCampaignSetting__mdt/fields/JEASP01__FieldApiNameForLead__c.field-meta.xml
<CustomField>
    <fullName>JEASP01__FieldApiNameForLead__c</fullName>
    <inlineHelpText>データ登録するSAQLの項目名を設定します。カンマ区切りにすることで複数選択ができます。</inlineHelpText>
    <label>(外部データ)リード登録するSAQL項目名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>