force-app/main/default/objects/JEASP01__CreateCampaignSetting__mdt/fields/JEASP01__FieldLabel__c.field-meta.xml
<CustomField>
    <fullName>JEASP01__FieldLabel__c</fullName>
    <inlineHelpText>表示したいSAQL項目のラベルを設定します。カンマ区切りにすることで複数選択ができます。登録した順に左から表示されます。</inlineHelpText>
    <label>表示したいSAQL項目のラベル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>