force-app/main/default/objects/JEASP01__CreateCampaignSetting__mdt/fields/JEASP01__IdField__c.field-meta.xml
<CustomField>
    <fullName>JEASP01__IdField__c</fullName>
    <inlineHelpText>一覧のレコードを特定するためのキー項目を設定します。</inlineHelpText>
    <label>ID項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>