force-app/main/default/objects/JEASP01__CreateCampaignSetting__mdt/fields/JEASP01__IsExternalData__c.field-meta.xml
<CustomField>
    <fullName>JEASP01__IsExternalData__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>外部データである場合チェックを入れます。</inlineHelpText>
    <label>(外部データ)外部データであるか</label>
    <type>Checkbox</type>
</CustomField>