force-app/main/default/objects/JEASP01__CreateCampaignSetting__mdt/fields/JEASP01__LeadFieldApiName__c.field-meta.xml
<CustomField>
    <fullName>JEASP01__LeadFieldApiName__c</fullName>
    <inlineHelpText>データ登録するリード項目のAPI参照名を設定します。カンマ区切りにすることで複数選択ができます。</inlineHelpText>
    <label>(外部データ)リード項目のAPI参照名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>