force-app/main/default/objects/JEASP01__CreateCampaignSetting__mdt/fields/JEASP01__LinkField__c.field-meta.xml
<CustomField>
    <fullName>JEASP01__LinkField__c</fullName>
    <inlineHelpText>レコード詳細にアクセスするためのリンクを設定する項目を設定します。</inlineHelpText>
    <label>リンク用表示項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>